--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -26,6 +26,9 @@
     <section>
         {% include '/sections/appointment.html' %}
     </section>
+    <section class="feedback">
+        {% include '/sections/feedback.html' %}
+    </section>
 
  
     </main>
