--- a/app/templates/sections/appointment.html
+++ b/app/templates/sections/appointment.html
@@ -32,7 +32,7 @@
         <!-- Appointment Section -->
     <div class="bg-black text-white md:w-[450px] md:h-[400px] p-6 rounded-xl shadow-md border-2 border-white">
             <h2 class="text-lg font-semibold mb-4">Select appointment time:</h2>
-            <h3 class="text-sm font-normal mb-4">Wednesday 14, 2025</h3>
+            <h3 class="text-sm font-normal mb-4">Wednesday - August 14, 2025</h3>
             <div class="grid grid-cols-2 gap-3">
                 <button class="border border-white py-2 px-4 rounded flex items-center justify-center gap-2"><span class="w-3 h-3 rounded-full bg-red-500"></span>9:00 AM</button>
                 <button class="border border-white py-2 px-4 rounded flex items-center justify-center gap-2"><span class="w-3 h-3 rounded-full bg-sky-400"></span>10:00 AM</button>
