--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -26,8 +26,14 @@
     <section>
         {% include '/sections/appointment.html' %}
     </section>
+        <section class="location">
+        {% include '/sections/location.html' %}
+    </section>
     <section class="feedback">
         {% include '/sections/feedback.html' %}
+    </section>
+    <section class="footer">
+        {% include '/sections/footer.html' %}
     </section>
 
  
