--- a/app/templates/sections/appointment.html
+++ b/app/templates/sections/appointment.html
@@ -18,7 +18,7 @@
 <div class="w-full h-auto flex flex-col md:flex-row justify-center p-6 gap-8">
 
    <!-- Calendar Section -->
-    <div class="bg-white border rounded-[8px] border-black md:w-[533px] shadow-md">
+    <div class="bg-white border rounded-[8px] border-black md:w-[533px]">
         <!-- Month Name -->
         <div class="flex items-center justify-between px-4 py-2 border-b border-black">
             <button id="prevMonth" class="text-xl">&lt;</button>
@@ -34,7 +34,11 @@
             <h2 class="text-lg font-semibold mb-4">Select appointment time:</h2>
             <h3 class="text-sm font-normal mb-4">Wednesday - August 14, 2025</h3>
             <div class="grid grid-cols-2 gap-3">
-                <button class="border border-white py-2 px-4 rounded flex items-center justify-center gap-2"><span class="w-3 h-3 rounded-full bg-red-500"></span>9:00 AM</button>
+                <a
+                    href="{{ url_for('routes.LOGIN') }}"
+                    role="button"
+                    class="inline-flex border border-white py-2 px-4 rounded items-center justify-center gap-2">
+                    <span class="w-3 h-3 rounded-full bg-red-500"></span>9:00 AM</a>
                 <button class="border border-white py-2 px-4 rounded flex items-center justify-center gap-2"><span class="w-3 h-3 rounded-full bg-sky-400"></span>10:00 AM</button>
                 <button class="border border-white py-2 px-4 rounded flex items-center justify-center gap-2"><span class="w-3 h-3 rounded-full bg-orange-500"></span>11:00 AM</button>
                 <button class="border border-white py-2 px-4 rounded flex items-center justify-center gap-2"><span class="w-3 h-3 rounded-full bg-blue-600"></span>1:00 PM</button>
