--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -33,11 +33,15 @@
             <input type="email" id="email" name="email" required
                 class="w-full border border-white/30 bg-white/10 text-white placeholder-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
         </div>
-
-        <button type="submit" id="confirmBtn" disabled
-            class="w-full py-2 bg-black border border-white text-white rounded hover:bg-white hover:text-black hover:border-black disabled:bg-gray-300/50 disabled:border-white disabled:text-white  disabled:cursor-not-allowed">
-            Confirm
-        </button>
+        
+        <a href="{{ url_for('routes.BARBER')}}"
+            type="submit" 
+            id="confirmBtn"
+            class="flex-1 flex justify-center items-center"
+            disabled>
+            <span class="w-full text-center py-2 bg-black border border-white text-white rounded hover:bg-white hover:text-black hover:border-black disabled:bg-gray-300/50
+             disabled:border-white disabled:text-white  disabled:cursor-not-allowed">Confirm</span>
+        </a>
     </form>
 </div>
     </section>
