log in & service page

--- a/app/templates/barber.html
+++ b/app/templates/barber.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Appointment</title>
+    <title>Barber</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@600&family=Faustina:wght@400;700&family=Lato:wght@300&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -71,9 +71,7 @@
     </div>
 
     <!-- Appointment Section (Right) -->
-    <div class="bg-black text-white md:w-auto md:h-auto p-6 rounded-xl shadow-md border-2 border-white 
-    hover:shadow-[4px_4px_16px_rgba(255,255,255,0.6),-4px_-4px_16px_rgba(255,255,255,0.6)] 
-            transition duration-300">
+    <div class="bg-black text-white md:w-auto md:h-auto p-6 rounded-xl shadow-md border-2 border-white">
         <h2 class="text-lg font-normal mb-4">Selected appointment time:</h2>
         <h3 class="text-3xl text-center font-faustina font-semibold mb-4">
             Wednesday <br> August 14, 2025
