--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -54,8 +54,6 @@
     --text-5xl--line-height: 1;
     --text-6xl: 3.75rem;
     --text-6xl--line-height: 1;
-    --text-7xl: 4.5rem;
-    --text-7xl--line-height: 1;
     --font-weight-light: 300;
     --font-weight-normal: 400;
     --font-weight-medium: 500;
@@ -70,9 +68,7 @@
     --radius-xl: 0.75rem;
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --blur-sm: 8px;
-    --blur-md: 12px;
     --blur-lg: 16px;
-    --blur-xl: 24px;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -279,9 +275,6 @@
   .z-10 {
     z-index: 10;
   }
-  .z-20 {
-    z-index: 20;
-  }
   .z-50 {
     z-index: 50;
   }
@@ -302,6 +295,12 @@
     @media (width >= 96rem) {
       max-width: 96rem;
     }
+  }
+  .mx-3 {
+    margin-inline: calc(var(--spacing) * 3);
+  }
+  .mx-4 {
+    margin-inline: calc(var(--spacing) * 4);
   }
   .mx-\[10px\] {
     margin-inline: 10px;
@@ -396,11 +395,17 @@
   .ml-6 {
     margin-left: calc(var(--spacing) * 6);
   }
+  .ml-7 {
+    margin-left: calc(var(--spacing) * 7);
+  }
   .ml-10 {
     margin-left: calc(var(--spacing) * 10);
   }
-  .ml-12 {
-    margin-left: calc(var(--spacing) * 12);
+  .ml-\[10px\] {
+    margin-left: 10px;
+  }
+  .ml-\[20px\] {
+    margin-left: 20px;
   }
   .ml-\[40px\] {
     margin-left: 40px;
@@ -462,14 +467,41 @@
   .h-32 {
     height: calc(var(--spacing) * 32);
   }
+  .h-35 {
+    height: calc(var(--spacing) * 35);
+  }
   .h-65 {
     height: calc(var(--spacing) * 65);
   }
   .h-75 {
     height: calc(var(--spacing) * 75);
   }
+  .h-85 {
+    height: calc(var(--spacing) * 85);
+  }
+  .h-\[10px\] {
+    height: 10px;
+  }
+  .h-\[45px\] {
+    height: 45px;
+  }
+  .h-\[50px\] {
+    height: 50px;
+  }
+  .h-\[55px\] {
+    height: 55px;
+  }
+  .h-\[65px\] {
+    height: 65px;
+  }
+  .h-\[70px\] {
+    height: 70px;
+  }
   .h-\[75px\] {
     height: 75px;
+  }
+  .h-\[80px\] {
+    height: 80px;
   }
   .h-\[85px\] {
     height: 85px;
@@ -483,20 +515,29 @@
   .h-\[110px\] {
     height: 110px;
   }
+  .h-\[120px\] {
+    height: 120px;
+  }
+  .h-\[130px\] {
+    height: 130px;
+  }
+  .h-\[140px\] {
+    height: 140px;
+  }
+  .h-\[150px\] {
+    height: 150px;
+  }
   .h-\[190px\] {
     height: 190px;
   }
   .h-\[200px\] {
     height: 200px;
   }
-  .h-\[270px\] {
-    height: 270px;
-  }
   .h-\[300px\] {
     height: 300px;
   }
-  .h-\[320px\] {
-    height: 320px;
+  .h-\[400px\] {
+    height: 400px;
   }
   .h-\[420px\] {
     height: 420px;
@@ -555,26 +596,32 @@
   .w-16 {
     width: calc(var(--spacing) * 16);
   }
-  .w-30 {
-    width: calc(var(--spacing) * 30);
-  }
   .w-42 {
     width: calc(var(--spacing) * 42);
   }
   .w-50 {
     width: calc(var(--spacing) * 50);
   }
+  .w-150 {
+    width: calc(var(--spacing) * 150);
+  }
   .w-250 {
     width: calc(var(--spacing) * 250);
+  }
+  .w-\[1px\] {
+    width: 1px;
   }
   .w-\[2px\] {
     width: 2px;
   }
-  .w-\[30px\] {
-    width: 30px;
+  .w-\[25px\] {
+    width: 25px;
   }
-  .w-\[50px\] {
-    width: 50px;
+  .w-\[55px\] {
+    width: 55px;
+  }
+  .w-\[65px\] {
+    width: 65px;
   }
   .w-\[70px\] {
     width: 70px;
@@ -591,8 +638,11 @@
   .w-\[130px\] {
     width: 130px;
   }
-  .w-\[150px\] {
-    width: 150px;
+  .w-\[200px\] {
+    width: 200px;
+  }
+  .w-\[220px\] {
+    width: 220px;
   }
   .w-\[250px\] {
     width: 250px;
@@ -600,20 +650,11 @@
   .w-\[280px\] {
     width: 280px;
   }
-  .w-\[300px\] {
-    width: 300px;
-  }
   .w-\[350px\] {
     width: 350px;
   }
   .w-\[450px\] {
     width: 450px;
-  }
-  .w-\[500px\] {
-    width: 500px;
-  }
-  .w-\[1200px\] {
-    width: 1200px;
   }
   .w-auto {
     width: auto;
@@ -690,6 +731,9 @@
   .justify-end {
     justify-content: flex-end;
   }
+  .justify-items-center {
+    justify-items: center;
+  }
   .gap-1 {
     gap: calc(var(--spacing) * 1);
   }
@@ -710,12 +754,6 @@
   }
   .gap-8 {
     gap: calc(var(--spacing) * 8);
-  }
-  .gap-10 {
-    gap: calc(var(--spacing) * 10);
-  }
-  .gap-12 {
-    gap: calc(var(--spacing) * 12);
   }
   .gap-50 {
     gap: calc(var(--spacing) * 50);
@@ -801,6 +839,10 @@
   .border-\[1px\] {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .border-\[4px\] {
+    border-style: var(--tw-border-style);
+    border-width: 4px;
   }
   .border-\[6px\] {
     border-style: var(--tw-border-style);
@@ -968,17 +1010,11 @@
   .p-10 {
     padding: calc(var(--spacing) * 10);
   }
-  .p-12 {
-    padding: calc(var(--spacing) * 12);
-  }
   .p-\[5px\] {
     padding: 5px;
   }
   .p-\[10px\] {
     padding: 10px;
-  }
-  .px-2 {
-    padding-inline: calc(var(--spacing) * 2);
   }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
@@ -991,9 +1027,6 @@
   }
   .px-42 {
     padding-inline: calc(var(--spacing) * 42);
-  }
-  .py-1 {
-    padding-block: calc(var(--spacing) * 1);
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
@@ -1177,10 +1210,6 @@
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-\[4px_4px_10px_rgba\(255\,255\,255\,0\.3\)\,-4px_-4px_10px_rgba\(255\,255\,255\,0\.3\)\] {
-    --tw-shadow: 4px 4px 10px var(--tw-shadow-color, rgba(255,255,255,0.3)), -4px -4px 10px var(--tw-shadow-color, rgba(255,255,255,0.3));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .shadow-lg {
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -1224,6 +1253,11 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
+  .transition-opacity {
+    transition-property: opacity;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
   .duration-300 {
     --tw-duration: 300ms;
     transition-duration: 300ms;
@@ -1231,6 +1265,10 @@
   .duration-500 {
     --tw-duration: 500ms;
     transition-duration: 500ms;
+  }
+  .duration-700 {
+    --tw-duration: 700ms;
+    transition-duration: 700ms;
   }
   .duration-1200 {
     --tw-duration: 1200ms;
@@ -1240,13 +1278,31 @@
     --tw-ease: var(--ease-in-out);
     transition-timing-function: var(--ease-in-out);
   }
-  .text-shadow-2xs {
-    text-shadow: 0px 1px 0px var(--tw-text-shadow-color, rgb(0 0 0 / 0.15));
-  }
   .group-hover\:left-1\/2 {
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
         left: calc(1/2 * 100%);
+      }
+    }
+  }
+  .group-hover\:h-\[55px\] {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        height: 55px;
+      }
+    }
+  }
+  .group-hover\:h-\[180px\] {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        height: 180px;
+      }
+    }
+  }
+  .group-hover\:w-\[55px\] {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        width: 55px;
       }
     }
   }
@@ -1255,6 +1311,66 @@
       @media (hover: hover) {
         --tw-translate-x: calc(calc(1/2 * 100%) * -1);
         translate: var(--tw-translate-x) var(--tw-translate-y);
+      }
+    }
+  }
+  .group-hover\:translate-y-\[-10px\] {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        --tw-translate-y: -10px;
+        translate: var(--tw-translate-x) var(--tw-translate-y);
+      }
+    }
+  }
+  .group-hover\:translate-y-\[10px\] {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        --tw-translate-y: 10px;
+        translate: var(--tw-translate-x) var(--tw-translate-y);
+      }
+    }
+  }
+  .group-hover\:items-center {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        align-items: center;
+      }
+    }
+  }
+  .group-hover\:justify-center {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        justify-content: center;
+      }
+    }
+  }
+  .group-hover\:text-center {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        text-align: center;
+      }
+    }
+  }
+  .group-hover\:text-2xl {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        font-size: var(--text-2xl);
+        line-height: var(--tw-leading, var(--text-2xl--line-height));
+      }
+    }
+  }
+  .group-hover\:text-3xl {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        font-size: var(--text-3xl);
+        line-height: var(--tw-leading, var(--text-3xl--line-height));
+      }
+    }
+  }
+  .group-hover\:opacity-0 {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        opacity: 0%;
       }
     }
   }
@@ -1337,13 +1453,6 @@
       border-right-width: 0px;
     }
   }
-  .hover\:left-\[30px\] {
-    &:hover {
-      @media (hover: hover) {
-        left: 30px;
-      }
-    }
-  }
   .hover\:scale-95 {
     &:hover {
       @media (hover: hover) {
@@ -1351,70 +1460,6 @@
         --tw-scale-y: 95%;
         --tw-scale-z: 95%;
         scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
-  .hover\:scale-102 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 102%;
-        --tw-scale-y: 102%;
-        --tw-scale-z: 102%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
-  .hover\:scale-103 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 103%;
-        --tw-scale-y: 103%;
-        --tw-scale-z: 103%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
-  .hover\:scale-104 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 104%;
-        --tw-scale-y: 104%;
-        --tw-scale-z: 104%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
-  .hover\:scale-105 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 105%;
-        --tw-scale-y: 105%;
-        --tw-scale-z: 105%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
-  .hover\:scale-110 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 110%;
-        --tw-scale-y: 110%;
-        --tw-scale-z: 110%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
-  .hover\:scale-\[103px\] {
-    &:hover {
-      @media (hover: hover) {
-        scale: 103px;
-      }
-    }
-  }
-  .hover\:scale-\[105px\] {
-    &:hover {
-      @media (hover: hover) {
-        scale: 105px;
       }
     }
   }
@@ -1436,13 +1481,6 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-gray-100);
-      }
-    }
-  }
-  .hover\:bg-gray-900 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-gray-900);
       }
     }
   }
@@ -1488,14 +1526,6 @@
       }
     }
   }
-  .hover\:shadow-\[0_0_20px_rgba\(0\,0\,0\,0\.8\)\] {
-    &:hover {
-      @media (hover: hover) {
-        --tw-shadow: 0 0 20px var(--tw-shadow-color, rgba(0,0,0,0.8));
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-      }
-    }
-  }
   .hover\:shadow-\[0_0_20px_rgba\(255\,255\,255\,0\.8\)\] {
     &:hover {
       @media (hover: hover) {
@@ -1504,34 +1534,10 @@
       }
     }
   }
-  .hover\:shadow-\[0_0_25px_rgba\(0\,0\,0\,0\.8\)\,0_0_40px_rgba\(255\,0\,150\,0\.6\)\] {
-    &:hover {
-      @media (hover: hover) {
-        --tw-shadow: 0 0 25px var(--tw-shadow-color, rgba(0,0,0,0.8)), 0 0 40px var(--tw-shadow-color, rgba(255,0,150,0.6));
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-      }
-    }
-  }
-  .hover\:shadow-\[4px_4px_16px_rgba\(0\,0\,0\,0\.6\)\,-4px_-4px_16px_rgba\(0\,0\,0\,0\.6\)\] {
-    &:hover {
-      @media (hover: hover) {
-        --tw-shadow: 4px 4px 16px var(--tw-shadow-color, rgba(0,0,0,0.6)), -4px -4px 16px var(--tw-shadow-color, rgba(0,0,0,0.6));
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-      }
-    }
-  }
   .hover\:shadow-\[4px_4px_16px_rgba\(255\,255\,255\,0\.6\)\,-4px_-4px_16px_rgba\(255\,255\,255\,0\.6\)\] {
     &:hover {
       @media (hover: hover) {
         --tw-shadow: 4px 4px 16px var(--tw-shadow-color, rgba(255,255,255,0.6)), -4px -4px 16px var(--tw-shadow-color, rgba(255,255,255,0.6));
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-      }
-    }
-  }
-  .hover\:shadow-inner {
-    &:hover {
-      @media (hover: hover) {
-        --tw-shadow: inset 0 2px 4px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.05));
         box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
       }
     }
@@ -1555,6 +1561,11 @@
   .focus\:ring-blue-500 {
     &:focus {
       --tw-ring-color: var(--color-blue-500);
+    }
+  }
+  .focus\:ring-white {
+    &:focus {
+      --tw-ring-color: var(--color-white);
     }
   }
   .focus\:outline-none {
@@ -1586,6 +1597,11 @@
       color: var(--color-white);
     }
   }
+  .sm\:grid-cols-2 {
+    @media (width >= 40rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
   .md\:hidden {
     @media (width >= 48rem) {
       display: none;
@@ -1604,11 +1620,6 @@
   .md\:h-auto {
     @media (width >= 48rem) {
       height: auto;
-    }
-  }
-  .md\:w-\[400px\] {
-    @media (width >= 48rem) {
-      width: 400px;
     }
   }
   .md\:w-\[450px\] {
@@ -1669,6 +1680,11 @@
   .lg\:w-\[500px\] {
     @media (width >= 64rem) {
       width: 500px;
+    }
+  }
+  .lg\:grid-cols-3 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
   .lg\:grid-cols-4 {
@@ -1915,15 +1931,6 @@
   syntax: "*";
   inherits: false;
 }
-@property --tw-text-shadow-color {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-text-shadow-alpha {
-  syntax: "<percentage>";
-  inherits: false;
-  initial-value: 100%;
-}
 @property --tw-translate-x {
   syntax: "*";
   inherits: false;
@@ -2014,8 +2021,6 @@
       --tw-backdrop-sepia: initial;
       --tw-duration: initial;
       --tw-ease: initial;
-      --tw-text-shadow-color: initial;
-      --tw-text-shadow-alpha: 100%;
       --tw-translate-x: 0;
       --tw-translate-y: 0;
       --tw-translate-z: 0;
