--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -19,22 +19,22 @@
         <div>
             <label for="full_name" class="block mb-1 text-sm font-montserrat text-white">Full Name</label>
             <input type="text" id="full_name" name="full_name" required
-                class="w-full border border-white/30 bg-white/10 text-white placeholder-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                class="w-full border border-white/30 bg-white/10 text-white placeholder-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-white">
         </div>
 
         <div>
             <label for="cellphone" class="block mb-1 text-sm font-montserrat text-white">Cellphone Number</label>
             <input type="tel" id="cellphone" name="cellphone" pattern="[0-9]{11}" required
-                class="w-full border border-white/30 bg-white/10 text-white placeholder-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                class="w-full border border-white/30 bg-white/10 text-white placeholder-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-white">
         </div>
 
         <div>
             <label for="email" class="block mb-1 text-sm font-montserrat text-white">Email Address</label>
             <input type="email" id="email" name="email" required
-                class="w-full border border-white/30 bg-white/10 text-white placeholder-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                class="w-full border border-white/30 bg-white/10 text-white placeholder-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-white">
         </div>
         
-        <a href="{{ url_for('routes.BARBER')}}"
+        <a href="{{ url_for('routes.SERVICES')}}"
             type="submit" 
             id="confirmBtn"
             class="flex-1 flex justify-center items-center"
