--- a/app/templates/barber.html
+++ b/app/templates/barber.html
@@ -81,6 +81,19 @@
                 <span class="w-3 h-3 rounded-full bg-red-400"></span>9:00 AM
             </button>
         </div>
+
+                      <!-- Mens' Haircut -->
+              <div class="group relative w-[350px] h-[85px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
+                <img src="{{ url_for('static', filename ='icons/erazor.png') }}" 
+                    alt="Beard Service" 
+                    class="w-[45px] h-[45px] object-contain ml-3 ">
+                <div class="w-[2px] h-full bg-black mx-4 "></div>
+                <div class="relative flex flex-col leading-tight ">
+                  <span class="text-xl font-faustina text-black font-bold mb-[-6px]">Men's Haircut</span>
+                  <span class="text-base font-faustina text-black font-normal">₱ 250.00</span>
+                </div>
+              </div>
+
         <h4 class="font-light text-[10px] mt-5">•Please provide your FULL NAME.</h4>
         <h4 class="font-light text-[10px]">•See to it that you're 100% sure before booking an appointment.</h4>
         <h4 class="font-light text-[10px]">•15 minutes late will be canceled to accommodate next client/walk-in.</h4>
